--- a/JS/package.json
+++ b/JS/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack --mode developer",
     "build": "webpack --mode production"
   },
   "author": "Danil Krivobok",
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.7.0",
+    "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-
+    "webpack-cli": "^5.1.4"
   }
 }
