--- a/admin/js/package.json
+++ b/admin/js/package.json
@@ -10,6 +10,7 @@
   "author": "Danil Krivobok",
   "license": "ISC",
   "dependencies": {
+    "fullcalendar": "^6.1.11",
     "jquery": "^3.7.0",
     "jquery.cookie": "^1.4.1",
     "select2": "^4.1.0-rc.0"
